design tweaks and visual polish

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <ul>
                     <li><a href="ss.com">Services</a></li>
                     <li><a href="pp.com">Portfolio</a></li>
-                    <li><a href="ab.com">About Me</a></li>
-                    <li><a href="cn.com">Contact</a></li>
+                    <li> <a href="https://github.com/itsravimaurya">Github</a></li>
+                    <li><a href="https://www.linkedin.com/in/raviprakashmaurya/">Linkedin</a></li>
             </ul>
         </nav>
     </div>
@@ -25,13 +25,13 @@
         <div class="container">
             <div class="hero-section-title">
                 <h1>Beautiful Designs. Powerful Websites</h1>
-                <h2>I help brands and creators to standout with eye-catching designs and fully functional websites - all crafted from scratch</h2>
-            </div>
-             <div class="hero-button">
+                <p>I help brands and creators to standout with eye-catching designs and fully functional websites - all crafted from scratch</p>
+            <div class="hero-button">
             <button type="button"> Sign up</button>
             </div>
+            </div>
+            <img src="/images/hero.png" height="450" width="800" alt="Showing a creative design and a website preview">
         </div>
-        <img src="/images/hero.png" height="450" width="800" alt="Showing a creative design and a website preview">
     </div>
 
     <div class="services">  
@@ -59,14 +59,14 @@
             “Ravi handled both the design and development for my project. I didn't need to hire two people. Saved time and the result was amazing.” 
         </div>
         <div class="client-name">
-            — Client Name
+            —Harry Brat
         </div>
     </blockquote>
 
     <div class="cta">
         <div class="container">
         <h1>Let's Create something amazing together. It's time!</h1>
-        <p>One person, two skills: I will design your brand identity and develop your digital presence</p>
+        <p>One person, two skills: I will design your brand identity and develop your digital presence.</p>
         </div>
         <div class="cta-button">
             <button type="button">Get a free quote</button>
@@ -75,9 +75,9 @@
     </div>
 
     <footer class="footer">   
-         &copy; 
-        <a href="https://github.com/itsravimaurya">Github</a>
-        <a href="https://www.linkedin.com/in/raviprakashmaurya/">Linkedin</a>
+         &copy; 2025 Flexbox Landing Page developed by Ravi Prakash Maurya 
+       
+        
     </footer>
 </body>
 </html>
