update link type

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button type="button"> Sign up</button>
             </div>
             </div>
-            <img src="/images/hero.png" height="450" width="800" alt="Showing a creative design and a website preview">
+            <img src="images/hero.png" height="450" width="800" alt="Showing a creative design and a website preview">
         </div>
     </div>
 
@@ -39,16 +39,16 @@
                 <h1>Type of services</h1>
             </div>
             <div class="container-services">
-            <div class="services-card"> <img src="/images/card1.png" alt="logo" height="200"    width="200"><br> 
+            <div class="services-card"> <img src="images/card1.png" alt="logo" height="200"    width="200"><br> 
             <p>Creative Design - YouTube thumbnails, Instagram carousels, banners, covers.</p>
             </div>
-            <div class="services-card"><img src="/images/card2.png" height="200" width="200" alt="logo"> <br> 
+            <div class="services-card"><img src="images/card2.png" height="200" width="200" alt="logo"> <br> 
             <p>Website Development - Custom HTML, CSS and Javascript and custom layouts.</p>
             </div>  
-            <div class="services-card"><img src="/images/card3.png" height="200" width="200" alt="logo"> <br>
+            <div class="services-card"><img src="images/card3.png" height="200" width="200" alt="logo"> <br>
             <p>Full Stack Solutions - APIs, database and dynamic web pages.</p>
             </div>
-            <div class="services-card"> <img src="/images/card4.png" height="200" width="200" alt="logo"><br> 
+            <div class="services-card"> <img src="images/card4.png" height="200" width="200" alt="logo"><br> 
             <p>Brand and Marketing Assets - Logos , Style guides and Brand kits.</p>
             </div> 
             </div>
